# ImDir

./: CMakeLists.txt  README.md
icons/: IconsLucide.h
include/: file_operations.h  terminal.h  ui.h
src/: file_operations.cpp  main.cpp  terminal.cpp  ui.cpp
